[package]
name = "oauth2-server-rs"
version = "0.3.1"
authors = ["Robert Lemmens <rj.lemmens@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ]}
warp = "0.3.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.8.3"
chrono = "0.4.19"
dotenv = "0.15.0" # read environment
config = "0.10.1" # read config van vershillende sources
base64 = "0.13.0"
sha2 = "0.9.5"
thiserror = "1.0.23"
deadpool-postgres = "0.7.0" # Connection pool
tokio-postgres = { version = "0.7.0", features = [ "with-chrono-0_4" ]} # Async client
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
